# fastapi_billing

./: .coverage  .dockerignore  .env.example  Dockerfile  Makefile  README.md  alembic.ini  celerybeat-schedule  docker-compose.yml  noxfile.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: nox.yml
app/: config.py  crud.py  database.py  main.py  settings.py
app/controllers/: balance.py  currencies.py  users.py
app/models/: balance.py  currencies.py  transactions.py  users.py
app/repositories/: balance.py  base.py  currencies.py  transactions.py  users.py
app/routers/: auth.py  balance.py  currencies.py  transfers.py  users.py
app/schemas/: balance.py  base.py  currencies.py  transactions.py  transfers.py  users.py
app/tools/: celery.py  tasks.py
app/utils/: exceptions.py  mail.py  messages.py  validators.py
configs/: .isort.cfg
migrations/: env.py
migrations/versions/: 2023_04_20_1039-6e89979ff539_init.py  2023_04_21_0915-8654bc0f34c4_initial.py  2023_04_21_0953-f9d516a35baa_initial.py  2023_04_21_1839-63dca0650ab9_migration_name.py  2023_04_22_1450-329cfb69ad28_migration_name.py  2023_04_22_1548-1418e3e02cec_migration_name.py  2023_04_22_1554-75bfbee96f7c_migration_name.py
tests/: .coverage  conftest.py  settings.py  test_balance.py  test_transactions.py  test_transfers.py  test_users.py  test_validation.py
