[tool.poetry]
name = "fastapi-billing"
version = "0.1.0"
description = ""
authors = ["FireFading "]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.24.0"
aiohttp = {extras = ["speedups"], version = "^3.8.4"}
aiodns = "^3.0.0"
orjson = "^3.8.10"
redis = "^4.5.4"
celery = "^5.2.7"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-mock = "^3.10.0"
fastapi-mail = "^1.2.8"
uvicorn = "^0.21.1"
alembic = "^1.10.4"
fastapi-pagination = "^0.12.2"
python-dotenv = "^1.0.0"
stackprinter = "^0.2.10"
aiosqlite = "^0.19.0"
sqlalchemy = "^2.0.10"
sqlalchemy-utils = "^0.41.0"
babel = "^2.12.1"
asyncpg = "^0.27.0"
psycopg2-binary = "^2.9.6"
bcrypt = "^4.0.1"
pydantic = {extras = ["email"], version = "^1.10.7"}
fastapi-jwt-auth = "^0.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
